--- a/packages.config
+++ b/packages.config
@@ -20,6 +20,10 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="Pdfium.Net.SDK" version="4.90.2704" targetFramework="net472" />
+  <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net472" />
+  <package id="PdfiumViewer.Native.x86.v8-xfa" version="2018.4.8.256" targetFramework="net472" />
+  <package id="PdfiumViewer.Native.x86_64.v8-xfa" version="2018.4.8.256" targetFramework="net472" />
   <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net472" />
   <package id="SixLabors.ImageSharp" version="2.1.8" targetFramework="net472" />
   <package id="SixLabors.ImageSharp.Drawing" version="1.0.0" targetFramework="net472" />
